--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -51,17 +51,11 @@
 
   {% include 'partials/nav-bar.html' %}
 
-  {% block jumbotron %}
-  <!-- index.html -->
-  {% endblock %}
+  {% block master %}
 
-  {% block styles %}
-  <!-- index.html -->
-  {% endblock %}
-
-  {% block content %}
 
   {% endblock %}
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
