--- a/src/templates/catalog/category.html
+++ b/src/templates/catalog/category.html
@@ -1,17 +1,21 @@
-{% extends 'base.html' %}
+{% extends 'primes/catalog.html' %}
 
-{% block content %}
-    <h1>{{ c.name }}</h1>
-    {{ c.description }}
-    <br /><br />>
-    {% for p in products %}
-        <div class = "product_thumbnail">
-            <a href="{{ p.get_absolute_url }}">
-                <img src="{{ MEDIA_URL }}images/products/thumbnails/{{ p.image }}"
-                     alt="{{ p.name }}" class = "bn" />
-                     <br />
-                     {{ p.name }}
-            </a>
-        </div>
-     {% endfor %}
+{% block slave %}
+
+    {% block content %}
+        <h1>{{ c.name }}</h1>
+        {{ c.description }}
+        <br /><br />>
+        {% for p in products %}
+            <div class = "product_thumbnail">
+                <a href="{{ p.get_absolute_url }}">
+                    <img src="{{ MEDIA_URL }}images/products/thumbnails/{{ p.image }}"
+                         alt="{{ p.name }}" class = "bn" />
+                         <br />
+                         {{ p.name }}
+                </a>
+            </div>
+         {% endfor %}
+    {% endblock %}
+
 {% endblock %}
