--- a/src/templates/catalog/product.html
+++ b/src/templates/catalog/product.html
@@ -1,17 +1,21 @@
-{% extends 'base.html' %}
+{% extends 'primes/catalog.html' %}
 
-{% block content %}
-    <div class = "product image">
-        <img src="{{ MEDIA_URL }}images/products/main/{{ p.image }}"
-             alt="{{ p.name }}" />
-    </div>
-    <h1>{{ p.name }}</h1>
-    Brand: <em>{{ p.brand }}</em>
-    <br /><br />
-    SKU: {{ p.sku }}
-    <br />
-    <!-- Django template filter use to format the output of the variables at the
-    point you display them in the page.
-    1 product category display "category", multiple product categories display "categories"-->
+{% block slave %}
+
+    {% block content %}
+        <div class = "product image">
+            <img src="{{ MEDIA_URL }}images/products/main/{{ p.image }}"
+                 alt="{{ p.name }}" />
+        </div>
+        <h1>{{ p.name }}</h1>
+        Brand: <em>{{ p.brand }}</em>
+        <br /><br />
+        SKU: {{ p.sku }}
+        <br />
+        <!-- Django template filter use to format the output of the variables at the
+        point you display them in the page.
+        1 product category display "category", multiple product categories display "categories"-->
+
+    {% endblock %}
 
 {% endblock %}
