--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,17 +4,21 @@
     Modern Music
 {% endblock %}
 
-{% block styles %}
-<style>
-    .jumbotron {
-        text-align: center;
-    }
-</style>
-{% endblock %}
+{% block master %}
 
-{% block jumbotron %}
- <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
-      </div>
+    {% block styles %}
+    <style>
+        .jumbotron {
+            text-align: center;
+        }
+    </style>
+    {% endblock %}
+
+    {% block jumbotron %}
+     <!-- Main jumbotron for a primary marketing message or call to action -->
+          <div class="jumbotron">
+            <p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
+          </div>
+    {% endblock %}
+
 {% endblock %}
