--- a/src/templates/tags/category_list.html
+++ b/src/templates/tags/category_list.html
@@ -1,5 +1,11 @@
-<h3>Categories</h3>
-{% for c in active_categories %}
-    <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
-    <br />
-{% endfor %}
+{% extends 'primes/tags.html' %}
+
+{% block slave %}
+
+    <h3>Categories</h3>
+    {% for c in active_categories %}
+        <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+        <br />
+    {% endfor %}
+
+{% endblock %}
