--- a/src/templates/catalog/product.html
+++ b/src/templates/catalog/product.html
@@ -1,6 +1,6 @@
 {% extends 'primes/catalog.html' %}
 
-{% block slave %}
+{% block worker %}
 
     {% block content %}
         <div class = "product image">
