--- a/src/templates/contact/forms.html
+++ b/src/templates/contact/forms.html
@@ -1,6 +1,6 @@
 {% extends 'primes/contact.html' %}
 
-{% block slave %}
+{% block worker %}
 
     {% block jumbotron %}
      <!-- Main jumbotron for a primary marketing message or call to action -->
