--- a/src/templates/tags/category_list.html
+++ b/src/templates/tags/category_list.html
@@ -1,6 +1,6 @@
 {% extends 'primes/tags.html' %}
 
-{% block slave %}
+{% block worker %}
 
     <h3>Categories</h3>
     {% for c in active_categories %}
