--- a/src/templates/partials/nav-bar.html
+++ b/src/templates/partials/nav-bar.html
@@ -8,11 +8,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'home' %}">Modern Music</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Modern Music</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-      {% url 'home' as home %}
+        <ul class="nav navbar-nav">
+            {% url 'home' as home %}
         <li {% if request.path == home %} class="active" {% endif %}>
           <a href="{% url 'home' %}">Home</a>
         </li>
@@ -32,22 +32,17 @@
         <li {% if request.path == category %} class="active" {% endif %}>
             <a href="{% url 'category' %}">Categories</a>
         </li>
-      {% url 'contact' as contact %}
-              <li {% if request.path == contact %} class="active" {% endif %}>
-                  <a href="{% url 'contact' %}">Contact Us</a>
-              </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+        <!--<li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
+               <ul class="dropdown-menu">
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li class="dropdown-header">Nav header</li>
+                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">One more separated link</a></li>
+                </ul>
+           </li>-->
       </ul>
     </div><!--/.nav-collapse -->
   </div>
