--- a/src/templates/contact/contactform.html
+++ b/src/templates/contact/contactform.html
@@ -3,10 +3,20 @@
 {% block worker %}
 
     {% block jumbotron %}
+
      <!-- Main jumbotron for a primary marketing message or call to action -->
           <div class="jumbotron">
+
             <p>Contact Us</p>
+
+              <form action="/your-name/" method="post">
+                {% csrf_token %}
+                {{ form }}
+                <input type="submit" value="Submit" />
+               </form>
+
           </div>
+
     {% endblock %}
 
 {% endblock %}
