--- a/src/templates/contact/contactform.html
+++ b/src/templates/contact/contactform.html
@@ -9,10 +9,10 @@
 
             <p>Contact Us</p>
 
-              <form action="/your-name/" method="post">
+              <form action="" method="post">
                 {% csrf_token %}
-                {{ form }}
-                <input type="submit" value="Submit" />
+                {{ form.as_p }}
+                <input type="submit" value="Submit Form" class="btn btn-default"/>
                </form>
 
           </div>
