--- a/src/templates/contact/contactform.html
+++ b/src/templates/contact/contactform.html
@@ -9,7 +9,7 @@
 
             <p>Contact Us</p>
 
-              <form action="" method="post">
+              <form role="form" action="" method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <input type="submit" value="Submit Form" class="btn btn-default"/>
