--- a/src/templates/contact/welcome_email.html
+++ b/src/templates/contact/welcome_email.html
@@ -9,7 +9,7 @@
 
             <h1>Welcome to example.com</h1>
             <p>Dear {{ user.email }}</p>
-            <p>Thank you for signing up to <a href="http://www.example.com">example.com</a></p>
+            <p>Thank you for contact us, we will get right back to you! <a href="http://www.example.com">example.com</a></p>
             <p>The example.com team</p>
 
           </div>
