--- a/src/templates/contact/contactform.html
+++ b/src/templates/contact/contactform.html
@@ -10,22 +10,29 @@
 
     {% block jumbotron %}
 
-     <!-- Main jumbotron for a primary marketing message or call to action -->
-          <div class="jumbotron">
+    <div class="jumbotron">
 
-              <h1>Contact Us</h1>
+        <div class='row'>
 
-              {% if form %}
+                 <div class ='col-sm-6 col-sm-offset-3'>
 
-                  <form role="form" action="" method="post">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <input type="submit" value="Submit Form" class="btn btn-default"/>
-                  </form>
+                      <h1>Contact Us</h1>
 
-              {% endif %}
+                      {% if form %}
 
-          </div>
+                          <form role="form" action="" method="post">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <input type="submit" value="Submit Form" class="btn btn-default"/>
+                          </form>
+
+                      {% endif %}
+
+                  </div>
+
+         </div>
+
+     </div>
 
     {% endblock %}
 
