--- a/src/templates/partials/nav-bar.html
+++ b/src/templates/partials/nav-bar.html
@@ -34,13 +34,17 @@
         </li>
       {% url 'contact' as contact %}
         <li {% if request.path == contact %} class="active" {% endif %}>
-            <a href="{% url 'contact' %}">Contact Us</a>
+            <a href="{% url 'contact' %}">Contact Us </a>
         </li>
         <!--<li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
+               {% if not request.user.is_authenticated %}
                <ul class="dropdown-menu">
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
+                    <li><a href="{% url 'account_login' %}">Login</a></li>
+                    <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
+                    {% else %}
+                    <li><a href="{% url 'account_logout' %}">Log Out</a></li>
+                    {% endif %}
                     <li role="separator" class="divider"></li>
                     <li class="dropdown-header">Nav header</li>
                     <li><a href="#">Separated link</a></li>
