--- a/src/templates/partials/nav-bar.html
+++ b/src/templates/partials/nav-bar.html
@@ -36,7 +36,7 @@
         <li {% if request.path == contact %} class="active" {% endif %}>
             <a href="{% url 'contact' %}">Contact Us </a>
         </li>
-        <!--<li class="dropdown">
+        <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
                {% if not request.user.is_authenticated %}
                <ul class="dropdown-menu">
@@ -50,7 +50,7 @@
                     <li><a href="#">Separated link</a></li>
                     <li><a href="#">One more separated link</a></li>
                 </ul>
-           </li>-->
+           </li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
